--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -16,11 +16,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.9);
   z-index: 9998;
 }
 
 .modalImage {
   max-width: 100%;
   max-height: 80vh;
+  transition: cubic-bezier(1.15, 0.82, 2.165, 1);
+  opacity: 1;
+  transition: opacity 0.3s;
 }
